// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if already published, should render the page with the previous publishing info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-2\\">Preview and publish project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Check details before publishing</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class='pins-preview-table'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Project information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Project details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case reference number</th>
                                <td class=\\"govuk-table__cell\\">CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project name</th>
                                <td class=\\"govuk-table__cell\\">Title CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sector</th>
                                <td class=\\"govuk-table__cell\\">Transport EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Subsector</th>
                                <td class=\\"govuk-table__cell\\">Highways EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case stage</th>
                                <td class=\\"govuk-table__cell\\">Pre-Application</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project description</th>
                                <td class=\\"govuk-table__cell\\">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                    et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project email address</th>
                                <td class=\\"govuk-table__cell\\">some@ema.il</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project location</th>
                                <td class=\\"govuk-table__cell\\">London</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Grid references</th>
                                <td class=\\"govuk-table__cell\\">123456 (Easting)
                                    <br>987654 (Northing)</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Region(s)</th>
                                <td class=\\"govuk-table__cell\\">London EN,Yorkshire EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Map zoom level</th>
                                <td class=\\"govuk-table__cell\\">City EN</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Applicant information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Applicant details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Organisation name</th>
                                <td class=\\"govuk-table__cell\\">Org name</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Website</th>
                                <td class=\\"govuk-table__cell\\">website.web</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Email address</th>
                                <td class=\\"govuk-table__cell\\">email@email.co</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Key dates</h2><a href='/applications-service/case/4/key-dates' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Key dates</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Anticipated submission date published</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Application submitted (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Acceptance decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Acceptance (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Non-Acceptance</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations open</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations close</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations to appear on website</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Preliminary Meeting start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination closing date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for submission of Recommendation</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Recommendation submitted to SoS</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Recommendation deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Decision deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date project withdrawn</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-!-margin-top-5\\" data-module=\\"govuk-button\\">Accept and publish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if not yet published, should render the page with no previous publishing info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-2\\">Preview and publish project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Check details before publishing</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class='pins-preview-table'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Project information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Project details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case reference number</th>
                                <td class=\\"govuk-table__cell\\">CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project name</th>
                                <td class=\\"govuk-table__cell\\">Title CASE/04</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sector</th>
                                <td class=\\"govuk-table__cell\\">Transport EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Subsector</th>
                                <td class=\\"govuk-table__cell\\">Highways EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Case stage</th>
                                <td class=\\"govuk-table__cell\\">Pre-Application</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project description</th>
                                <td class=\\"govuk-table__cell\\">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                    et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project email address</th>
                                <td class=\\"govuk-table__cell\\">some@ema.il</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Project location</th>
                                <td class=\\"govuk-table__cell\\">London</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Grid references</th>
                                <td class=\\"govuk-table__cell\\">123456 (Easting)
                                    <br>987654 (Northing)</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Region(s)</th>
                                <td class=\\"govuk-table__cell\\">London EN,Yorkshire EN</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Map zoom level</th>
                                <td class=\\"govuk-table__cell\\">City EN</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Applicant information</h2><a href='/applications-service/case/4/' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Applicant details</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Organisation name</th>
                                <td class=\\"govuk-table__cell\\">Org name</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Website</th>
                                <td class=\\"govuk-table__cell\\">website.web</td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Email address</th>
                                <td class=\\"govuk-table__cell\\">email@email.co</td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class='pins-preview-table govuk-!-margin-top-9'>
                <div class='pins-preview-table__header govuk-!-margin-bottom-2'>
                    <h2>Key dates</h2><a href='/applications-service/case/4/key-dates' class='govuk-link govuk-heading-s govuk-!-margin-bottom-0'>Edit</a>
                </div>
                <div>
                    <table class=\\"govuk-table\\">
                        <caption class=\\"govuk-table__caption govuk-visually-hidden\\">Key dates</caption>
                        <tbody class=\\"govuk-table__body\\">
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Anticipated submission date published</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Application submitted (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Acceptance decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Acceptance (Section 55)</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Non-Acceptance</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations open</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations close</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date Relevant Representations to appear on website</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Preliminary Meeting start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination start date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Examination closing date</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to close of Examination</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for submission of Recommendation</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Recommendation submitted to SoS</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Recommendation deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Deadline for Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date of Decision</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Extension to Decision deadline</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                            <tr class=\\"govuk-table__row\\">
                                <th scope=\\"row\\" class=\\"govuk-table__header\\">Date project withdrawn</th>
                                <td class=\\"govuk-table__cell\\"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-!-margin-top-5\\" data-module=\\"govuk-button\\">Accept and publish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page POST /case/123/preview-and-publish if the case is not published yet, should go the first-time success banner page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-panel govuk-panel--confirmation\\">
                <h1 class=\\"govuk-panel__title\\"> Project page successfully published</h1>
                <div class=\\"govuk-panel__body\\">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/04
                        <br>Reference: CASE/04</p>
                </div>
            </div>
            <p class='govuk-!-margin-top-6 govuk-!-margin-bottom-6'>The project will be published to the NI website within the hour.</p>
            <a             href=\\"/applications-service/case/4/\\" class=\\"govuk-link\\">Go back to Overview</a>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Unpublish case page GET /case/123/unpublish should render the page with the right info 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <form id=\\"pins-publish-case\\" class=\\"govuk-grid-row \\" method=\\"post\\" action=\\"\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-8\\">Unpublish the project</h1>
            <p class=\\"govuk-body govuk-!-margin-bottom-2\\">Case: Title CASE/04</p>
            <p class=\\"govuk-body govuk-!-margin-bottom-6\\">Reference: CASE/04</p>
        </div>
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-warning-text\\"><span class=\\"govuk-warning-text__icon\\" aria-hidden=\\"true\\">!</span>
                <strong                 class=\\"govuk-warning-text__text\\"><span class=\\"govuk-warning-text__assistive\\">Warning</span> Unpublishing
                    will remove the project page and any associated content from the NI website.
                    <br>
                    <br>You will be able to republish the project and content again.</strong>
            </div>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <button class=\\"govuk-button govuk-button--warning govuk-!-margin-top-5\\"
            data-module=\\"govuk-button\\">Unpublish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Unpublish case page POST /case/123/unpublish should go to success page if unpublished worked 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-panel govuk-panel--confirmation\\">
                <h1 class=\\"govuk-panel__title\\"> Project page successfully unpublished</h1>
                <div class=\\"govuk-panel__body\\">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/04
                        <br>Reference: CASE/04</p>
                </div>
            </div>
            <p class='govuk-!-margin-top-6 govuk-!-margin-bottom-6'>The project will be unpublished from the NI website within the hour. You
                can republish the project page and associated content after this.</p>
            <a             href=\\"/applications-service/case/4/\\" class=\\"govuk-link\\">Go back to Overview</a>
        </div>
    </div>
</main>"
`;
